Add some css from Bootstrap

--- a/popup.html
+++ b/popup.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Escaux Credential</title>
+  <link rel="stylesheet" type="text/css" href="popup.css"/>
 </head>
 <body>
   <h1>Escaux Credential</h1>
