Add some fade-in fade-out for the feedback on save

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Escaux Credential</h1>
-  <div id="status"></div>
+  <div id="status">Options saved.</div>
   <dl>
     <dt>Auto-login</dt><dd><input type="checkbox" id="auto"></dd>
     <br>
@@ -15,6 +15,7 @@
   </dl>
   <button id="save">Save</button>
   
+  <script type="text/javascript" src="ClassList.shim.js"></script>
   <script type="text/javascript" src="popup.js"></script>
 </body>
 </html>
